feat: added jwt token gen
